RESOLVED FIXED125153
Fix build error in WK2 (r159965)
https://bugs.webkit.org/show_bug.cgi?id=125153
Summary Fix build error in WK2 (r159965)
Attachments
Patch (1.17 KB, patch)
2013-12-03 08:14 PST, Laszlo Vidacs
no flags
Laszlo Vidacs
Comment 1 2013-12-03 08:14:21 PST
Darin Adler
Comment 2 2013-12-03 08:57:07 PST
Comment on attachment 218296 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=218296&action=review > Source/WebKit2/Shared/APIClient.h:54 > #pragma clang diagnostic ignored "-Wmissing-braces" Is this still needed?
WebKit Commit Bot
Comment 3 2013-12-03 09:23:09 PST
Comment on attachment 218296 [details] Patch Clearing flags on attachment: 218296 Committed r160008: <http://trac.webkit.org/changeset/160008>
WebKit Commit Bot
Comment 4 2013-12-03 09:23:10 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.