Fix EFL build error in WK2 (159965) https://bugs.webkit.org/show_bug.cgi?id=125153

Patch by Laszlo Vidacs <lac@inf.u-szeged.hu> on 2013-12-03
Reviewed by Darin Adler.

* Shared/APIClient.h:

Canonical link: https://commits.webkit.org/143248@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160008 268f45cc-cd09-0410-ab3c-d52691b4dbfc